--- a/about-en.html
+++ b/about-en.html
@@ -114,47 +114,23 @@
                     </ul>
                 </nav>
 
-                <section class="main__about about">
-                    <div class="about__inner">
+                <section class="main__support">
+                    <div class="support__inner">
                         <h1>
-                            About Us
+                            About
                         </h1>
-                        <div class="texts">
-                            <p>
-                                Family of Flexshow. com sites is non-adult and available for any age group.
-                            </p>
-                            <p>
-                                Flexshow. com is dedicated to propagate wonderful abilities of human body, <br> it’s
-                                suppleness, flexibility, fitness.
-                            </p>
-                            <p>
-                                Access fee allows support of our models, helps to continue their careers in sport,
-                                choreography and yoga
-                            </p>
-                            <p>
-                                All of us are grateful for your support
-                            </p>
-                        </div>
-                        <h2>
-                            Do you want to be a model?
-                        </h2>
-                        <div class="texts">
-                            <p>
-                                Do you like our site?
-                            </p>
-                            <p>
-                                Have you achieved progress I development of you flexibility?
-                            </p>
-                            <p>
-                                Do you want to share your success?
-                            </p>
-                            <p>
-                                Please contact us and we will discuss terms of the photo/video session.
-                            </p>
+                        <div class="texts texts-flex">
                             <a href="#">
-                                Articles
+                                What is contortion?
+                            </a>
+                            <a href="#">
+                                What is flexshow contortion?
+                            </a>
+                            <a href="#">
+                                How can I become a Flexshow Contortion performer?
                             </a>
                         </div>
+
                     </div>
                 </section>
             </div>
