--- a/customer.html
+++ b/customer.html
@@ -83,22 +83,32 @@
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a class="nav__link" href="#">
-                                Flexshow
+                                Home
                             </a>
                         </li>
                         <li class="nav__item">
                             <a class="nav__link" href="#">
-                                flexshow-media
+                                Members Login
                             </a>
                         </li>
                         <li class="nav__item">
                             <a class="nav__link" href="#">
-                                flexshow-ballet
+                                Join Now
                             </a>
                         </li>
                         <li class="nav__item">
                             <a class="nav__link" href="#">
-                                flexshow-archive
+                                Preview
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">
+                                Links
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">
+                                Support
                             </a>
                         </li>
                     </ul>
@@ -106,29 +116,29 @@
 
                 <section class="main__customer customer">
                     <div class="customer__inner">
-                        <h1 class="customer__title title">
+                        <h1>
                             Customer service
                         </h1>
-                        <ul class="customer__list">
-                            <li class="customer__item">
+                        <ul>
+                            <li>
                                 All sites flexshow.com
                             </li>
-                            <li class="customer__item">
+                            <li>
                                 flexshow-media.com
                             </li>
-                            <li class="customer__item">
+                            <li>
                                 flexshow-ballet.com
                             </li>
-                            <li class="customer__item">
+                            <li>
                                 flexshow-archive.com
                             </li>
-                            <li class="customer__item">
+                            <li>
                                 are now in one Site. We need a bit time time to fill them.
                             </li>
-                            <li class="customer__item">
+                            <li>
                                 You will see the very best of past Images and Videos.
                             </li>
-                            <li class="customer__item">
+                            <li>
                                 We constantly updated the site with new and exclusive photo sets and videos.
                             </li>
                         </ul>
