--- a/flexshow-n.html
+++ b/flexshow-n.html
@@ -82,15 +82,9 @@
                 <section class="main__media media">
                     <div class="media__inner">
                         <a class="media__link link" href="#">Return</a>
-                        <h1 class="media__name media__name--centered">
+                        <h1 class="title-centered">
                             Elena
                         </h1>
-
-
-
-
-
-
 
 
 
