--- a/flexshowmedia-n.html
+++ b/flexshowmedia-n.html
@@ -82,67 +82,70 @@
                 <section class="main__media media">
                     <div class="media__inner">
                         <a class="media__link link" href="#">Return</a>
-                        <h1 class="media__name">
-                            Elena
-                        </h1>
-                        <date class="media__date">
-                            23.04.2023
-                        </date>
+                        <div class="media__info">
+                            <h1 class="media__name">
+                                Elena
+                            </h1>
+                            <date>
+                                23.04.2023
+                            </date>
 
-                        <div class="media__images">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
-                            <img class="media__img"
-                                src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
-                                alt="">
+                            <div class="media__images">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                                <img class="media__img"
+                                    src="https://www.flexshow.com/upload/resize_cache/iblock/20c/duef2z60jarni34nv3642zqcy63fpt31/172_97_2/kmc_20220810_040646.jpg"
+                                    alt="">
+                            </div>
+                            <a class="media__bottom-link link" href="#">Download video</a>
                         </div>
-                        <a class="media__bottom-link link" href="#">Download video</a>
+
                         <a class="media__link link" href="#">Return</a>
                     </div>
                 </section>
