--- a/join.html
+++ b/join.html
@@ -116,17 +116,22 @@
 
                 <section class="main__support">
                     <div class="support__inner">
-                        <h1 class="support__title title">
+                        <h1>
                             Join Now
                         </h1>
-                        <p class="support__attention">
+                        <p>
                             <strong>* Important! Achtung! L'attention! 注意!</strong>
                         </p>
-                        <p class="support__text">
-                            Passwords for PayPal accounts will be activated during <strong>48 hours</strong> . You will
-                            receive personal password on e-mail which you filled in PayPal form. Your membership starts
-                            from the moment of password sending.
-                        </p>
+                        <div class="texts">
+                            <p class="support__text">
+                                Passwords for PayPal accounts will be activated during <strong>48 hours</strong> . You
+                                will
+                                receive personal password on e-mail which you filled in PayPal form. Your membership
+                                starts
+                                from the moment of password sending.
+                            </p>
+                        </div>
+
                         <div class="support__columns">
                             <p class="support__column">
                                 PAY WITH <br> <strong>PAYPAL</strong> FOR:
