--- a/links.html
+++ b/links.html
@@ -116,28 +116,31 @@
 
                 <section class="main__members members">
                     <div class="members__inner">
-                        <h1 class="members__title title">
+                        <h1>
                             Links
                         </h1>
                         <div class="members__link-wrapper">
-                            <a class="members__link link" href="#">
+                            <a class="link" href="#">
                                 Articles about Contortion (Contorsion)
                             </a>!
                         </div>
-                        <p class="members__text members__text--links">
-                            We are calling to all Contortion enthusiasts.
-                        </p>
-                        <p class="members__text members__text--links">
-                            Our goal is to broadcast wonderful abilities of human body: <br>
-                            agility, flexibility, beauty.
-                        </p>
-                        <p class="members__text members__text--links">
-                            If your site is non-adult and dedicated to the similar Contortion topics,
-                            we would happily post a link on our Flexshow.com.
-                        </p>
-                        <p class="members__text members__text--links">
-                            Of course we would expect you to post our link on your site)
-                        </p>
+                        <div class="texts">
+                            <p>
+                                We are calling to all Contortion enthusiasts.
+                            </p>
+                            <p>
+                                Our goal is to broadcast wonderful abilities of human body: <br>
+                                agility, flexibility, beauty.
+                            </p>
+                            <p>
+                                If your site is non-adult and dedicated to the similar Contortion topics,
+                                we would happily post a link on our Flexshow.com.
+                            </p>
+                            <p>
+                                Of course we would expect you to post our link on your site)
+                            </p>
+                        </div>
+
                     </div>
                 </section>
             </div>
