--- a/members2.html
+++ b/members2.html
@@ -88,13 +88,13 @@
                             <span class="reg__label-text">
                                 Login:
                             </span>
-                            <input class="reg__label-input" type="text" name="USER_LOGIN" maxlength="255">
+                            <input type="text" name="USER_LOGIN" maxlength="255">
                         </label>
                         <label class="reg__label">
                             <span class="reg__label-text">
                                 Password:
                             </span>
-                            <input class="reg__label-input" type="text" name="USER_PASSWORD" maxlength="255"
+                            <input type="text" name="USER_PASSWORD" maxlength="255"
                                 autocomplete="off">
                         </label>
                         <div class="reg__bottom">
