--- a/preview.html
+++ b/preview.html
@@ -106,18 +106,20 @@
 
                 <section class="main__members members">
                     <div class="members__inner">
-                        <h1 class="members__title title">
+                        <h1>
                             Welcome to the preview section!
                         </h1>
-                        <p class="members__text members__text--big">
-                            From now on all four web sites: flexshow.com flexshow-media.com flexshow-ballet.com and
-                            flexshow-archive.com
-                            have one common access and you can choose which one you would like to visit.
-                            <br>Please refer to upper menu for that.
-                        </p>
-                        <p class="members__text members__text--big">
-                            Enjoy our flexible content!
-                        </p>
+                        <div class="texts">
+                            <p>
+                                From now on all four web sites: flexshow.com flexshow-media.com flexshow-ballet.com and
+                                flexshow-archive.com
+                                have one common access and you can choose which one you would like to visit.
+                                <br>Please refer to upper menu for that.
+                            </p>
+                            <p>
+                                Enjoy our flexible content!
+                            </p>
+                        </div>
                     </div>
                 </section>
             </div>
