--- a/support.html
+++ b/support.html
@@ -116,12 +116,12 @@
 
                 <section class="main__members members">
                     <div class="members__inner">
-                        <h1 class="members__title title">
+                        <h1>
                             Support
                         </h1>
                         <div class="members__link-wrapper">
                             Regarding all support requests related this site, please email
-                            <a class="members__link" href="#">
+                            <a class="link" href="#">
                                 support@flexshow.com
                             </a>
                         </div>
