--- a/what.html
+++ b/what.html
@@ -50,7 +50,7 @@
     <link href="css/main.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="choose">
 
     <header class="header">
         <div class="container">
@@ -114,46 +114,73 @@
                     </ul>
                 </nav>
 
-                <section class="main__about about">
-                    <div class="about__inner">
+                <section class="main__support">
+                    <div class="support__inner">
                         <h1>
-                            About Us
+                            About
                         </h1>
+                        <h2><strong>What is Contortion?</strong></h2>
+                        <p>Choose a spelling: <button>Contorsion</button></p>
                         <div class="texts">
                             <p>
-                                Family of Flexshow. com sites is non-adult and available for any age group.
+                                Contortion is a form of performing art that involves extreme flexibility and body
+                                control. Contortionists are individuals who can twist, bend, and stretch their bodies
+                                into unusual and impressive shapes. They often showcase their abilities in circus
+                                performances, variety shows, dance routines, or as part of theatrical performances.
                             </p>
                             <p>
-                                Flexshow. com is dedicated to propagate wonderful abilities of human body, <br> it’s
-                                suppleness, flexibility, fitness.
+                                Contortion requires exceptional flexibility in the muscles, joints, and ligaments. It
+                                typically involves bending the spine, limbs, and neck beyond what is considered normal
+                                range of motion. Contortionists often perform moves such as backbends, splits,
+                                handstands, and other contorted positions.
                             </p>
                             <p>
-                                Access fee allows support of our models, helps to continue their careers in sport,
-                                choreography and yoga
+
+                                Training to become a Contortionist usually involves a combination of stretching
+                                exercises, strength training, and conditioning to improve flexibility and maintain
+                                control over the body while performing various contorted poses. It is important for
+                                Contortionists to take proper precautions and work with experienced trainers to minimize
+                                the risk of injury.
                             </p>
                             <p>
-                                All of us are grateful for your support
+                                Contortion is both physically demanding and visually captivating, combining elements of
+                                physical skill, artistry, and showmanship. It is often considered a unique and
+                                awe-inspiring discipline within the realm of performing arts.
                             </p>
+                            <p>
+                                Contortion is a form of performing art that involves extreme flexibility and body
+                                control. Contortionists are individuals who can twist, bend, and stretch their bodies
+                                into unusual and impressive shapes. Contortionists are based in body-bending
+                                entertainment shows, body-painting performances, and other extreme Contortion-based
+                                acts.
+                            </p>
+                            <p>
+                                Contortionist Physical Skills and Emotional Strength.
+                            </p>
+                            <p>
+                                People who take part in Contortion, especially extreme Contortion, must also be mentally
+                                strong and emotionally stable.
+                            </p>
+                            <p>
+                                Life as a Contortionist is a high-risk activity, as people can become seriously injured
+                                if they are not careful about the exercise and their personal hygiene.
+                            </p>
+                            <p>
+                                The mental and emotional side of a Contortionist are similar to that of a gymnast or any
+                                other high-level physical athlete. They must be highly focused and maintain strong will
+                                power.
+                            </p>
+                            <p>
+                                Attention to the details and appreciation for form are vital in order to achieve the
+                                correct.
+                            </p>
+                            <div class="texts-flex">
+                                <a href="#">Take a look at the Contortion with one eye</a>
+                                <a href="#">Get full access to Contortion videos and photo</a>
+                            </div>
                         </div>
-                        <h2>
-                            Do you want to be a model?
-                        </h2>
                         <div class="texts">
-                            <p>
-                                Do you like our site?
-                            </p>
-                            <p>
-                                Have you achieved progress I development of you flexibility?
-                            </p>
-                            <p>
-                                Do you want to share your success?
-                            </p>
-                            <p>
-                                Please contact us and we will discuss terms of the photo/video session.
-                            </p>
-                            <a href="#">
-                                Articles
-                            </a>
+                           <a href="#">Back to the list</a>
                         </div>
                     </div>
                 </section>
