--- a/contact.html
+++ b/contact.html
@@ -116,12 +116,15 @@
 
                 <section class="main__contact contact">
                     <div class="contact__inner">
-                        <h1 class="contact__title title">
+                        <h1>
                             Contact Us
                         </h1>
-                        <p class="contact__text">
-                            Regarding all support requests related this site, please email <a class="link" href="#">support@flexshow.com</a>
-                        </p>
+                        <div class="texts">
+                            <p>
+                                Regarding all support requests related this site, please email <a class="link"
+                                    href="#">support@flexshow.com</a>
+                            </p>
+                        </div>
                     </div>
                 </section>
             </div>
